--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
     <section class="tabs">
       <div class="tab_header">
-        <div class="tab" data-tab="0"><i class="fas fa-mobile"></i>iPhone</div>
-        <div class="tab" data-tab="1"><i class="fas fa-robot"></i>Android</div>
-        <div class="tab" data-tab="2"><i class="fab fa-linux"></i>Linux</div>
-        <div class="tab" data-tab="3"><i class="fab fa-windows"></i>Windows</div>
-        <div class="tab" data-tab="4"><i class="fas fa-robot"></i>Android</div>
+        <div class="tab" data-tab="0"><span class="fas fa-mobile"></span>iPhone</div>
+        <div class="tab" data-tab="1"><span class="fas fa-robot"></span>Android</div>
+        <div class="tab" data-tab="2"><span class="fab fa-linux"></span>Linux</div>
+        <div class="tab" data-tab="3"><span class="fab fa-windows"></span>Windows</div>
+        <div class="tab" data-tab="4"><span class="fas fa-robot"></span>Android</div>
       </div>
       <div class="tabs_body">
         <div class="content-tab">iPhone</div>
@@ -70,7 +70,7 @@
 
     <section class="popover">
       <button id="popover_button">
-        <i class="fas fa-info"></i>
+        <span class="fas fa-info"></span>
       </button>
       <div id="myModal" class="modal">
         <div class="modal_content">
@@ -109,9 +109,8 @@
     </section>
 
     <section class="timer">
-      <span id="doc_time">
+      <span id="doc_time"></span>
     </section>
-    </span>
   </main>
 </body>
 </html>
